pi-cluster/system/ingress-nginx/templates/diskstation.yaml
apiVersion: v1
kind: Service
metadata:
  name: diskstation
  namespace: ingress-nginx
  labels:
    k8s-app: diskstation
spec:
  type: ClusterIP  
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: minio
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: minioconsole
    port: 9001
    protocol: TCP
    targetPort: 9001   
  - name: auth
    protocol: TCP
    targetPort: 12080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: diskstation
  namespace: ingress-nginx
  labels:
    k8s-app: diskstation
subsets:
- addresses:
  - ip: 192.168.0.3
  ports:
  - name: http
    port: 5000
    protocol: TCP
  - name: minio  
    port: 9000
    protocol: TCP
  - name: minioconsole 
    port: 9001
    protocol: TCP  
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diskstation
  namespace: ingress-nginx
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ds.ronnywalter.de
    http:
      paths:
      - backend:
          service:
            name: diskstation
            port: 
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - ds.ronnywalter.de
      secretName: diskstation-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: ingress-nginx  
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minio.ronnywalter.de
    http:
      paths:
      - backend:
          service: 
            name: diskstation
            port: 
              number: 9000
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - minio.ronnywalter.de
      secretName: minio-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minioconsole
  namespace: ingress-nginx  
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minioconsole.ronnywalter.de
    http:
      paths:
      - backend:
          service: 
            name: diskstation
            port: 
              number: 9001
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - minioconsole.ronnywalter.de
      secretName: minioconsole-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note
  namespace: ingress-nginx
  annotations:    
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: note.ronnywalter.de
    http:
      paths:
      - backend:
          service: 
            name: diskstation
            port: 
              number: 80
        path: /note
        pathType: Prefix
  tls:
    - hosts:
      - note.ronnywalter.de
      secretName: diskstation-note-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: ingress-nginx
  annotations:    
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: auth.rwcloud.org
    http:
      paths:
      - backend:
          service: 
            name: diskstation
            port: 
              number: 12080
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - auth.rwcloud.org
      secretName: auth-rwcloud-org-tls
